--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <div class="calculator-container">
     <h2>Round Tablecloth Size Calculator</h2>
-
+    <p align="center"><img src="https://cdn.shopify.com/s/files/1/0250/3408/files/stretch-round-tablecloth-mvpvisuals.png"></p>
     <label for="tableDiameter">Table Diameter (in inches):</label>
     <input type="number" id="tableDiameter" min="20" max="100" placeholder="e.g. 60">
 
