--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
   <div class="calculator-container">
     <div class="title-card">
       <h2>Round Tablecloth Size Calculator</h2>
+      <img src="https://cdn.shopify.com/s/files/1/0250/3408/files/stretch-round-tablecloth-mvpvisuals.png?v=1748730151">
     </div>
 
     <label for="tableDiameter">Table Diameter (in inches):</label>
