--- a/index.html
+++ b/index.html
@@ -201,8 +201,11 @@
     <div class="title-card">
       <h2>Round Tablecloth Size Calculator</h2>
     </div>
-      <img src="https://cdn.shopify.com/s/files/1/0250/3408/files/stretch-round-tablecloth-mvpvisuals.png?v=1748730151">
-
+      <img 
+  src="https://cdn.shopify.com/s/files/1/0250/3408/files/stretch-round-tablecloth-mvpvisuals.png?v=1748730151" 
+  alt="Stretch round tablecloth with labeled dimensions" 
+  style="max-width: 100%; height: auto; display: block; margin: 0 auto;"
+>
     <div class="input-row">
       <div class="input-column">
         <label for="tableDiameter">Table Diameter (in):</label>
